--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "better-auth": "^1.3.4",
     "next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
