--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "@scalar/nestjs-api-reference": "^0.5.12",
     "better-auth": "^1.3.4",
     "drizzle-orm": "^0.44.4",
     "pg": "^8.16.3",
