--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@scalar/nestjs-api-reference": "^0.5.12",
     "better-auth": "^1.3.4",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
