--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,1 +1,6 @@
+# DB
 DB_CONNECTION_STRING="" # your postgres database connection string
+
+#BETTER AUTH
+BETTER_AUTH_URL="http://localhost:3001"
+BETTER_AUTH_SECRET="your-super-secret-key"
