chore | added better-auth provider, configmodule and .env variables

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,10 @@
 # DB
 DB_CONNECTION_STRING="" # your postgres database connection string
 
-#BETTER AUTH
+# BETTER AUTH
 BETTER_AUTH_URL="http://localhost:3001"
 BETTER_AUTH_SECRET="your-super-secret-key"
+
+# OAUTH
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
