--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@scalar/nestjs-api-reference": "^0.5.12",
     "better-auth": "^1.3.4",
+    "cookie-parser": "^1.4.7",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.4",
     "pg": "^8.16.3",
@@ -42,6 +43,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
