Chore | added deployment_url variable and include it in trusted origins

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,6 @@ BETTER_AUTH_SECRET="your-super-secret-key"
 # OAUTH
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# DEPLOYED URL
+DEPLOYMENT_URL=""
