Chore | created USE_SECURE_COOKIES variable

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -12,3 +12,6 @@ GITHUB_CLIENT_SECRET=""
 # DEPLOYED URL
 DEPLOYMENT_URL=""
 DEPLOYMENT_CLIENT_URL=""
+
+#COOKIES
+USE_SECURE_COOKIES=false # development
